--- a/src/index.scss
+++ b/src/index.scss
@@ -1,8 +1,7 @@
-$primary: lightgrey;
-$secondary: grey;
-$body-bg: grey;
+$primary: whitesmoke;
+$secondary: lightgrey;
+$body-bg: lightgrey;
 $color: steelblue;
-$border: none;
 
 
 @import "~bootstrap/scss/bootstrap.scss";
