--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,7 @@
 $primary: whitesmoke;
 $secondary: lightgrey;
 $body-bg: whitesmoke;
-$color: steelblue;
+$border-color: black;
 
 
 @import "~bootstrap/scss/bootstrap.scss";
