--- a/src/components/movie-card/movie-card.scss
+++ b/src/components/movie-card/movie-card.scss
@@ -1,4 +1,8 @@
 // $accordion-button-active-bg: lightgrey;
+#movieCard {
+    background: whitesmoke;
+    border: none;
+}
 
 .card-img {
     border: 10px solid black;
